--- a/FUEBB_1007/FUEBB7_XY.html
+++ b/FUEBB_1007/FUEBB7_XY.html
@@ -6,27 +6,34 @@
     <title>Szókirakó</title>
 </head>
 <body>
-   <h2>SZÓKIRAKÓ JÁTÉK</h2> 
+   <h2 style="color: red;">SZÓKIRAKÓ JÁTÉK</h2> 
     <div>
-    Adott egy 4*9-es négyzetháló. A program megad egy -a négyzetháló feletti képhez
-    kapcsolódó - szót vagy mondatot, majd ennek betűit összekeverve elhelyezi ebben a 
-    négyzethálóban.
-    A játékos feladata az, hogy az összekevert betűkből kirakja a szót
-    vagy mondatot a kijelölt helyen. A betűket vízszintes vagy függőleges irányban egyenként
-                                                lehet mozgatni.
+    Adott egy 4*9-es négyzetháló. A <b>program</b> megad egy -a négyzetháló feletti képhez <br>
+    kapcsolódó - szót vagy mondatot, majd ennek betűit <font style="color: blue;">összekeverve</font>  elhelyezi ebben a <br>
+    négyzethálóban. <br>
+    &nbsp; <font> <b>A játékos feladata az, hogy az összekevert betűkből kirakja a szót</b></font> <br>
+    &nbsp;&nbsp; vagy mondatot a kijelölt helyen. <u>A betűket vízszintes vagy függőleges irányban egyenként</u> <br>
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<u>lehet mozgatni.</u> 
     </div>
+    <br> <br>
     <div>
-        Ha a betű útját elállja egy másik betű, akkor az csak a másik betűig tolódik el.
-    Miután sikerült a betűket a megfelelő helyre mozgatni, a program ezt jelzi, ha viszont valamely
-    betűket felcseréltük, akkor azokra színkiemeléssel hívja fel a figyelmünket.
+    &nbsp;&nbsp;&nbsp; Ha a betű útját elállja egy másik betű, akkor az csak a másik betűig tolódik el. <br>
+    Miután sikerült a betűket a megfelelő helyre mozgatni, a program ezt jelzi, ha viszont valamely <br>
+    betűket felcseréltük, <i>akkor azokra színkiemeléssel hívja fel a</i> 
+    <font style="color: yellow;">figyelmünket.</font> 
     </div>
+    <br>
     <div>
-    Derékszögű háromszögben igaz Pitagorasz tétel:
-    a2+b2=c2
+    <font style="color: red;"><b>Derékszögű háromszögben igaz Pitagorasz tétel:</b></font> <br>
+    <div><font style="color: red;"> <b>a<sup>2</sup></b></font> <b>+</b> 
+        <font style="color: blue;"><b>b<sup>2</sup></b></font> <b>=</b> 
+        <font style="color: green;"> <b>c<sup>2</sup></b></font></div>
     </div>
+    <br>
     <div>
-    Általános háromszögek esetén is igaz:
-    α+ß+γ=180
+    <font style="color: blue;"> <b>Általános háromszögek esetén is igaz: </b></font> <br>
+    <font style="color: green; font:4;"><b>α+ß+γ=180°</b></font> 
     </div>
     
 </body>
